syntax = "proto3";

package manga;

option go_package = "mangahub/proto/manga";



// --------------------------
// Messages
// --------------------------

message GetMangaRequest {
    string id = 1;
}

message MangaResponse {
    string id = 1;
    string title = 2;
    string author = 3;
    string genres = 4;  // JSON text from your DB
    string status = 5;
    int32 total_chapters = 6;
    string description = 7;
}

message SearchRequest {
    string query = 1;
    string genre = 2;
    string status = 3;
    int32 limit = 4;
}

message SearchResult {
    string id = 1;
    string title = 2;
    string author = 3;
    string status = 4;
}

message SearchResponse {
    repeated SearchResult results = 1;
}

message ProgressRequest {
    string user_id = 1;
    string manga_id = 2;
    int32 current_chapter = 3;
}

message ProgressResponse {
    string message = 1;
}

message GetProgressRequest {
    string user_id = 1;
    string manga_id = 2;
}

message GetProgressResponse {
    bool exists = 1;
    int32 current_chapter = 2;
}

// --------------------------
// Service
// --------------------------

service MangaService {
    rpc SearchManga(SearchRequest) returns (SearchResponse);
    rpc GetManga(GetMangaRequest) returns (MangaResponse);
    rpc UpdateProgress(ProgressRequest) returns (ProgressResponse);

    // NEW
    rpc GetProgress(GetProgressRequest) returns (GetProgressResponse);
}
